--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "nodemon server.js"
+    "run": "nodemon server.js",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -21,9 +22,12 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "function-plot": "^1.23.2",
     "path": "^0.12.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   }
 }
