--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "path": "^0.12.7"
   },
   "devDependencies": {
